Footer images corrected and aligned properly

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -323,6 +323,11 @@ section {
 #footer .footer-top .footer-contact {
   margin-bottom: 30px;
   margin-top: -20px;
+  z-index: 1;
+}
+
+#footer .footer-top .footer-contact .footer-logo {
+  max-width: 70%;
 }
 
 #footer .footer-top .footer-contact h3 {
@@ -346,8 +351,8 @@ section {
   margin-bottom: 0;
   font-weight: 400;
   color: #fff;
-  margin-top: 20px;
-  margin-left: 66px;
+  margin-top: 1.3em;
+  margin-left: 3.5em;
 }
 #footer .footer-top .footer-contact p a {
   color: #c1c1c1;
@@ -464,9 +469,9 @@ section {
 }
 #footer .foote_img img:nth-child(4) {
   position: absolute;
-  width: 130px;
-  right: -65px;
-  bottom: 40px;
+  width: 90px;
+  right: 0;
+  bottom: 50px;
 }
 #footer .footer_copyright {
   position: relative;
